18.11.2010
        - Updated build part README file - read it! Tell user to specify Release build type. (Tim)
        - Added printout of build type in top level cmake. (Tim)
        - Removed duplicate LASH detection in top level cmake. (Tim)
        - Ported the following .ui widgets to Qt4: transformbase, itransformbase, mrconfigbase (Orcan)
17.11.2010
        - Removed a fix which cured graphic corruption for me in MusE-1. Not required now. (Tim)
        - Small change to Orcan's filedialog, re-enabled global button. (Tim)
        - Ported the following .ui widgets to Qt4: songinfo, mittransposebase, velocitybase (Orcan)
16.11.2010
        - Fixed track info sizing problems. In Arranger::switchInfo() added tgrid->update(). (Tim)
          QLayout::update() seems to be a new method, we needed to call it here.
        - Fixed mixer maximum and minimum sizes. (Tim)
          Bit of a tough hack. Is there a better way? Done by sub-classing QScrollArea and catching 
           LayoutRequest events, just before paint events when the window sizes are finally correct.
          TODO: Still off by a few pixels when mixer first opened, because main window frameSize 
           is not set yet, by the time LayoutRequest is caught.
	- Transformed file dialogs to Qt4. This was the first attempt to transform a .ui file to Qt4
	  as well. New .ui files do not store image information. Thus I moved the 3 icons from
	  qfiledialog.ui into their own files.
	  TODO: Qt4 does not support file preview in file dialogs yet. The relevant code (wallpaper
	  preview) is disabled. Now we either have to implement an image previewer, or forget about
	  this feature. (Orcan)
	- Only try to use theme icons in file dialogs if Qt >= 4.6 (Orcan)
14.11.2010
        - renamed deicsonze2 files and classes with '2' suffixes
        - Applied patch by Orcan to convert populateAddSynth(). (Tim)
        - Changed all setMargin() calls to setContentsMargins(). (setMargin() is obsoleted!) (Tim)